ontol/ontol-compiler/test-cases/error/rel/value_generator_as_field_typ.on
def foo ( rel .'prop': auto ) // ERROR object must be a data type// ERROR type not representable// NOTE type of field is abstract
